# unimrcp_with_xfplugin

./: README.md
unimrcp-deps-1.5.0/: build-dep-libs.sh
unimrcp-unimrcp-1.5.0_plugin/: configure.ac  install.sh  unimrcp.service  unimrcp1.5.IAB  unimrcp1.5.IAD  unimrcp1.5.IMB  unimrcp1.5.IMD  unimrcp1.5.PFI  unimrcp1.5.PO  unimrcp1.5.PR  unimrcp1.5.PRI  unimrcp1.5.PS  unimrcp1.5.SearchResults  unimrcp1.5.WK3
unimrcp-unimrcp-1.5.0_plugin/conf/: unimrcpserver.xml
unimrcp-unimrcp-1.5.0_plugin/plugins/: Makefile.am
unimrcp-unimrcp-1.5.0_plugin/plugins/xfyun-recog/src/: xfyun_recog_engine.c
